add language and currency
