# docs/api/api.yaml
@@ -192,6 +192,16 @@ components:
           type: string
           format: url
           example: 'https://www.zesite.com'
+        language:
+          type: string
+          format: url
+          example: fr
+          description: Default language code of the site. The code is in the ISO0639-1 format
+        currency:
+          type: string
+          format: url
+          example: XFA
+          description: Default currency code of the site. The code is in the ISO-4217 format
         attributes:
           type: array
           items:
@@ -228,9 +238,19 @@ components:
         displayName:
           type: string
           example: ZeSite
+        language:
+          type: string
+          format: url
+          example: fr
+        currency:
+          type: string
+          format: url
+          example: XFA
       required:
         - name
         - domainName
+        - language
+        - currency
     UpdateSiteResponse:
       type: object
       properties:
@@ -255,9 +275,19 @@ components:
         displayName:
           type: string
           example: ZeSite
+        language:
+          type: string
+          format: url
+          example: fr
+        currency:
+          type: string
+          format: url
+          example: XFA
       required:
         - name
         - domainName
+        - language
+        - currency
     CreateSiteResponse:
       type: object
       properties:
