# src/main/kotlin/com/wutsi/site/dto/CreateSiteRequest.kt
@@ -8,5 +8,9 @@ public data class CreateSiteRequest(
     public val name: String = "",
     @get:NotBlank
     public val domainName: String = "",
-    public val displayName: String = ""
+    public val displayName: String = "",
+    @get:NotBlank
+    public val language: String = "",
+    @get:NotBlank
+    public val currency: String = ""
 )
